# Nuked-SC55-CLAP

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
CMakeModules/: FindSpeexDSP.cmake
src/: nuked_sc55.cpp  nuked_sc55.h  plugin.cpp  plugin.plist.in  plugin.version
src/nuked-sc55/: audio.h  cast.h  command_line.h  emu.cpp  emu.h  lcd.cpp  lcd.h  lcd_font.h  main_frontend.cpp  math_util.h  mcu.cpp  mcu.h  mcu_interrupt.h  mcu_opcodes.cpp  mcu_timer.cpp  mcu_timer.h  midi.h  midi_rtmidi.cpp  midi_win32.cpp  path_util.cpp  path_util.h  pcm.cpp  pcm.h  render_frontend.cpp  ringbuffer.h  smf.cpp  smf.h  submcu.cpp  submcu.h  wav.cpp  wav.h
